updated experiences section & styling

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,12 @@ a {
   color: inherit;
 }
 
+.container a {
+  color: grey; 
+  font-weight: bolder;
+  text-decoration: underline; 
+}
+
 .nav  li.socials:hover {
   margin-top: 0;
   opacity: 0.5; 
