--- a/src/components/Window/Window.css
+++ b/src/components/Window/Window.css
@@ -1,19 +1,23 @@
+.content-wrapper {
+    width: 60%;
+    margin: auto;  
+}
 .win-wrapper {
-    width: 100%; 
-    background-color: white;
-    overflow: hidden;
+    /* width: 100%; 
+    overflow: hidden;*/
     margin: 20px auto;
     display: grid; 
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 0.5fr 2fr; 
+    background-color: white;
     box-shadow: 2px 1px 1px grey;
-    border-radius: 8px;
+    border-radius: 8px; 
+    min-height: 350px;
 }
 .mini-nav {
     background-color: #ededed;
     font-size: 14px; 
     color: grey;
     padding: 10px; 
-    
 }
 .mini-nav li {
     margin: 10px 5px;
@@ -33,8 +37,22 @@
 }
 .active-alt {
     color: black; 
-    font-size: 16px;
-    border-bottom: none; 
     font-weight: bold; 
-    border-bottom-color: black;
+}
+
+@media screen and (max-width: 900px) {
+    .win-wrapper {
+        display: block; 
+    }
+    .mini-nav {
+        display: flex;
+        overflow-x: auto;
+    }
+    .exps {
+        border-bottom: 1.5px solid grey; 
+        border-left: none;
+    }
+    .content-wrapper {
+        width: 90%; 
+    }
 }
