--- a/src/components/Window/Window.css
+++ b/src/components/Window/Window.css
@@ -1,10 +1,11 @@
-.content-wrapper {
-    width: 60%;
-    margin: auto;  
+:root {
+    --heading-size: 20px; 
+    --body-text-size: 16px; 
+    --small-text-size: 14px; 
 }
+
 .win-wrapper {
-    /* width: 100%; 
-    overflow: hidden;*/
+    font-size: var(--body-text-size); 
     margin: 20px auto;
     display: grid; 
     grid-template-columns: 0.5fr 2fr; 
@@ -14,10 +15,11 @@
     min-height: 350px;
 }
 .mini-nav {
-    background-color: #ededed;
-    font-size: 14px; 
+    background-color: rgba(200, 200, 200, 0.1);
     color: grey;
     padding: 10px; 
+    font-size: var(--small-text-size); 
+    border-radius: 8px 0 0 8px;
 }
 .mini-nav li {
     margin: 10px 5px;
@@ -33,12 +35,32 @@
 }
 
 .blurb {
+    padding: 20px; 
+}
+.description {
     padding: 20px;
+}
+.description li {
+    list-style-type: disclosure-closed;
+}
+.skills {
+    display: flex; 
+    flex-wrap: wrap;
+}
+.tag {
+    background-color: rgba(51, 51, 51, 0.07);
+    border-radius: 0.125rem;
+    padding: 0.5rem 0.75rem;
+    margin: 5px;
+    font-size: 12px;
+    display: inline-flex; 
+    align-items: center;
 }
 .active-alt {
     color: black; 
     font-weight: bold; 
 }
+
 
 @media screen and (max-width: 900px) {
     .win-wrapper {
@@ -51,8 +73,5 @@
     .exps {
         border-bottom: 1.5px solid grey; 
         border-left: none;
-    }
-    .content-wrapper {
-        width: 90%; 
     }
 }
